--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
 
             <div class="culture-img">
-                <img src="/images/ad.jpg">
+                <img src="images/ad.jpg">
             </div>
         </section>
 
